New Development: No             JIRA Issue: Yes CAS-2668         Ready for Test: Yes      Interface Changes: No What Interface Changed: Please list interface changes          Test Programs: List test programs   Put in Release Notes: Yes/No              Module(s): Module Names change impacts.            Description: Describe your changes here...
Bug fix on installation.

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -12,5 +12,5 @@ add_executable( ${ASAP2TO3} ${EXEC_SRC} )
 target_link_libraries( ${ASAP2TO3} ${CASACORE_LIBRARIES} )
 
 # install
-install( PROGRAMS ${ASAP2TO3} 
-         DESTINATION ${EXEC_INSTALL_DIR} )
+install( TARGETS ${ASAP2TO3}
+         RUNTIME DESTINATION ${EXEC_INSTALL_DIR} )
