--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -9,7 +9,11 @@ set( EXEC_SRC asap2to3.cpp )
 add_executable( ${ASAP2TO3} ${EXEC_SRC} )
 
 # dependencies
-target_link_libraries( ${ASAP2TO3} ${CASACORE_LIBRARIES} )
+target_link_libraries( ${ASAP2TO3} 
+                       ${CASACORE_LIBRARIES} 
+                       ${DL_LIBRARIES} 
+                       ${BLAS_LIBRARIES}
+                       ${LAPACK_LIBRARIES} )
 
 # install
 install( TARGETS ${ASAP2TO3}
