New Development: No             JIRA Issue: Yes CAS-2668         Ready for Test: Yes      Interface Changes: No What Interface Changed: Please list interface changes          Test Programs: List test programs   Put in Release Notes: Yes/No              Module(s): Module Names change impacts.            Description: Describe your changes here...
Bug fix on include path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -423,8 +423,9 @@ message( STATUS "Boost_INCLUDE_DIR = " ${Boost_INCLUDE_DIR} )
 include_directories( ${CASACORE_INCLUDE_DIR} 
                      ${Boost_INCLUDE_DIR} 
                      ${PYTHON_INCLUDE_DIR} 
-                     ${WCSLIB_INCLUDE_DIR} )
-message( STATUS "WCSLIB = " ${WCSLIB} )
+                     ${WCSLIB_INCLUDE_DIR} 
+                     ${CFITSIO_INCLUDE_DIRS} 
+                     ${RPFITS_INCLUDE_DIR} )
 
 #
 # link path
