New Development: No             JIRA Issue: Yes CAS-2668         Ready for Test: Yes      Interface Changes: No What Interface Changed: Please list interface changes          Test Programs: List test programs   Put in Release Notes: Yes/No              Module(s): Module Names change impacts.            Description: Describe your changes here...
Bug fix on USE_LIBCASACORE switch.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -158,6 +158,8 @@ message( STATUS "LAPACK_LIBRARIES = " ${LAPACK_LIBRARIES} )
 #
 # casacore
 #
+unset( CASACORE_INCLUDE_DIR CACHE )
+unset( CASACORE_LIBRARIES CACHE )
 if( NOT USE_LIBCASACORE )
    # use casacore libraries 
    set( _includename casa/aipsdef.h )
@@ -210,7 +212,7 @@ else()
 endif()
 message( STATUS "CASACORE_LIBRARIES = " ${CASACORE_LIBRARIES} )
 message( STATUS "CASACORE_INCLUDE_DIR = " ${CASACORE_INCLUDE_DIR} )
-
+unset( USE_LIBCASACORE CACHE )
 
 #
 # Python
