New Development: No             JIRA Issue: No         Ready for Test: Yes      Interface Changes: No What Interface Changed: Please list interface changes          Test Programs: List test programs   Put in Release Notes: Yes/No              Module(s): Module Names change impacts.            Description: Describe your changes here...
Added svninfo.txt in install file list. The file is used to get revision number 
in the code.

--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -36,7 +36,8 @@ set( PYTHON_MODULES
      ${PYTHONDIR}/scantable.py
      ${PYTHONDIR}/selector.py
      ${PYTHONDIR}/simplelinefinder.py
-     ${PYTHONDIR}/utils.py )
+     ${PYTHONDIR}/utils.py 
+     ${PYTHONDIR}/svninfo.txt )
 
 install( PROGRAMS ${PYTHON_MODULES} 
          DESTINATION ${PYTHON_INSTALL_DIR} )
